<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.kayhut</groupId>
    <artifactId>fuse</artifactId>
    <packaging>pom</packaging>
    <version>1.0-SNAPSHOT</version>
    <modules>
        <module>data-gen</module>
        <module>fuse-model</module>
        <module>fuse-validator</module>
        <module>fuse-asg</module>
        <module>fuse-dispatcher</module>
        <module>fuse-service</module>
        <module>fuse-axis1</module>
        <module>fuse-axis2</module>
        <module>fuse-test</module>
        <module>geojson-jackson</module>
        <module>fuse-datagen</module>
        <module>fuse-assembly</module>
    </modules>

    <scm>
        <developerConnection>scm:git:http://gita.westeurope.cloudapp.azure.com/fuse/Fuse.git</developerConnection>
        <tag>1.0</tag>
    </scm>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <top.dir>${project.basedir}</top.dir>
        <version.major>1</version.major>
        <version.minor>11</version.minor>

        <checksum-maven-plugin.version>1.2</checksum-maven-plugin.version>
        <findbugs.version>3.0.1</findbugs.version>
        <git-commit-id-plugin.version>2.1.9</git-commit-id-plugin.version>
        <maven-checkstyle-plugin.version>2.12.1</maven-checkstyle-plugin.version>
        <maven-dependency-plugin.version>2.10</maven-dependency-plugin.version>
        <maven-shade-plugin.version>2.1</maven-shade-plugin.version>

        <!-- jackson -->
        <jackson.version>2.8.1</jackson.version>

        <!-- commons -->
        <commons-io.version>2.5</commons-io.version>
        <commons-configuration.version>1.10</commons-configuration.version>
        <commons-lang3.version>3.5</commons-lang3.version>
        <commons-math3.version>3.6.1</commons-math3.version>
        <commons-collections4.version>4.1</commons-collections4.version>

        <!-- google -->
        <google.guava.version>21.0</google.guava.version>
        <google.guice.version>4.1.0</google.guice.version>

        <!-- caffeine -->
        <caffeine.version>2.3.3</caffeine.version>

        <!-- elasticsearch -->
        <elasticsearch.version>2.4.5</elasticsearch.version>

        <!-- tinkerpop -->
        <tinkerpop.version>3.2.4</tinkerpop.version>

        <!-- unipop -->
        <unipop.version>0.2</unipop.version>

        <!-- opencsv -->
        <opencsv.version>3.8</opencsv.version>

        <!-- javaslang -->
        <javaslang.version>2.0.4</javaslang.version>

        <!--jooby plugin -->
        <jooby.version>1.1.3</jooby.version>

        <!-- logging -->
        <slf4j.version>1.7.13</slf4j.version>
        <slf4j-api.version>1.7.21</slf4j-api.version>
        <logback.version>1.1.7</logback.version>

        <!-- metrics -->
        <metrics-core.version>3.1.2</metrics-core.version>

        <!-- test -->
        <junit.version>4.12</junit.version>
        <easymock.version>3.2</easymock.version>
        <rest-assured.version>3.0.1</rest-assured.version>
        <mockito-all.version>1.10.19</mockito-all.version>
        <assertj.version>3.6.2</assertj.version>
        <jsonassert.version>1.4.0</jsonassert.version>
        <hamcrest-all.version>1.3</hamcrest-all.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <!-- jackson -->
            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-annotations</artifactId>
                <version>${jackson.version}</version>
            </dependency>
            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-databind</artifactId>
                <version>${jackson.version}</version>
            </dependency>
            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-core</artifactId>
                <version>${jackson.version}</version>
            </dependency>
            <dependency>
                <groupId>com.fasterxml.jackson.dataformat</groupId>
                <artifactId>jackson-dataformat-csv</artifactId>
                <version>${jackson.version}</version>
            </dependency>
            <!-- jackson -->

            <!-- commons -->
            <dependency>
                <groupId>commons-io</groupId>
                <artifactId>commons-io</artifactId>
                <version>${commons-io.version}</version>
            </dependency>
            <dependency>
                <groupId>commons-configuration</groupId>
                <artifactId>commons-configuration</artifactId>
                <version>${commons-configuration.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-lang3</artifactId>
                <version>${commons-lang3.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-collections4</artifactId>
                <version>${commons-collections4.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-math3</artifactId>
                <version>${commons-math3.version}</version>
            </dependency>
            <!-- commons -->

            <!-- google -->
            <dependency>
                <groupId>com.google.guava</groupId>
                <artifactId>guava</artifactId>
                <version>${google.guava.version}</version>
            </dependency>
            <dependency>
                <groupId>com.google.inject</groupId>
                <artifactId>guice</artifactId>
                <version>${google.guice.version}</version>
            </dependency>
            <!-- google -->

            <!-- caffeine -->
            <dependency>
                <groupId>com.github.ben-manes.caffeine</groupId>
                <artifactId>caffeine</artifactId>
                <version>${caffeine.version}</version>
            </dependency>
            <!-- caffeine -->

            <!-- jooby -->
            <dependency>
                <groupId>org.jooby</groupId>
                <artifactId>jooby</artifactId>
                <version>${jooby.version}</version>
            </dependency>
            <dependency>
                <groupId>org.jooby</groupId>
                <artifactId>jooby-netty</artifactId>
                <version>${jooby.version}</version>
            </dependency>
            <dependency>
                <groupId>org.jooby</groupId>
                <artifactId>jooby-caffeine</artifactId>
                <version>${jooby.version}</version>
            </dependency>
            <dependency>
                <groupId>org.jooby</groupId>
                <artifactId>jooby-scanner</artifactId>
                <version>${jooby.version}</version>
            </dependency>
            <dependency>
                <groupId>org.jooby</groupId>
                <artifactId>jooby-jackson</artifactId>
                <version>${jooby.version}</version>
            </dependency>
            <dependency>
                <groupId>org.jooby</groupId>
                <artifactId>jooby-metrics</artifactId>
                <version>${jooby.version}</version>
            </dependency>
            <!-- jooby -->

            <!-- elasticsearch -->
            <dependency>
                <groupId>org.elasticsearch</groupId>
                <artifactId>elasticsearch</artifactId>
                <version>${elasticsearch.version}</version>
            </dependency>
            <!-- elasticsearch -->

            <!-- tinkerpop -->
            <dependency>
                <groupId>org.apache.tinkerpop</groupId>
                <artifactId>gremlin-core</artifactId>
                <version>${tinkerpop.version}</version>
            </dependency>
            <!-- tinkerpop -->

            <!-- unipop -->
            <dependency>
                <groupId>unipop</groupId>
                <artifactId>unipop-core</artifactId>
                <version>${unipop.version}</version>
                <!--This is needed to avoid bringing log4j because it interferes with slf4j logback setup, which is the default for jooby-->
                <exclusions>
                    <exclusion>
                        <groupId>org.slf4j</groupId>
                        <artifactId>slf4j-log4j12</artifactId>
                    </exclusion>
                    <exclusion>
                        <groupId>log4j</groupId>
                        <artifactId>log4j</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>
            <dependency>
                <groupId>unipop</groupId>
                <artifactId>unipop-elastic</artifactId>
                <version>${unipop.version}</version>
            </dependency>
            <!-- unipop -->

            <!-- opencsv -->
            <dependency>
                <groupId>com.opencsv</groupId>
                <artifactId>opencsv</artifactId>
                <version>${opencsv.version}</version>
            </dependency>
            <!-- opencsv -->

            <!-- javaslang -->
            <dependency>
                <groupId>io.javaslang</groupId>
                <artifactId>javaslang</artifactId>
                <version>${javaslang.version}</version>
            </dependency>
            <!-- javaslang -->

            <!-- logging -->
            <dependency>
                <groupId>ch.qos.logback</groupId>
                <artifactId>logback-classic</artifactId>
                <version>${logback.version}</version>
            </dependency>
            <dependency>
                <groupId>ch.qos.logback</groupId>
                <artifactId>logback-core</artifactId>
                <version>${logback.version}</version>
            </dependency>
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j</artifactId>
                <version>${slf4j.version}</version>
            </dependency>
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-api</artifactId>
                <version>${slf4j-api.version}</version>
            </dependency>
            <!-- logging -->

            <!-- metrics -->
            <dependency>
                <groupId>io.dropwizard.metrics</groupId>
                <artifactId>metrics-core</artifactId>
                <version>${metrics-core.version}</version>
            </dependency>
            <!-- metrics -->

            <!-- test -->
            <dependency>
                <groupId>junit</groupId>
                <artifactId>junit</artifactId>
                <version>${junit.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.easymock</groupId>
                <artifactId>easymock</artifactId>
                <version>${easymock.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.mockito</groupId>
                <artifactId>mockito-all</artifactId>
                <version>${mockito-all.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>io.rest-assured</groupId>
                <artifactId>rest-assured</artifactId>
                <version>${rest-assured.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.assertj</groupId>
                <artifactId>assertj-core</artifactId>
                <version>${assertj.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.skyscreamer</groupId>
                <artifactId>jsonassert</artifactId>
                <version>${jsonassert.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-math3</artifactId>
                <version>${commons-math3.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.hamcrest</groupId>
                <artifactId>hamcrest-all</artifactId>
                <version>${hamcrest-all.version}</version>
                <scope>test</scope>
            </dependency>
            <!-- test -->
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-release-plugin</artifactId>
                <version>2.5.3</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-checkstyle-plugin</artifactId>
                <executions>
                    <execution>
                        <id>validate</id>
                        <phase>validate</phase>
                        <configuration>
                            <configLocation>${top.dir}/src/main/config/checkstyle/checker.xml</configLocation>
                            <suppressionsLocation>${top.dir}/src/main/config/checkstyle/suppressions.xml
                            </suppressionsLocation>
                            <consoleOutput>true</consoleOutput>
                            <headerLocation>${top.dir}/src/main/config/checkstyle/header.txt</headerLocation>
                            <failOnViolation>true</failOnViolation>
                            <includeTestSourceDirectory>true</includeTestSourceDirectory>
                        </configuration>
                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-checkstyle-plugin</artifactId>
                    <version>${maven-checkstyle-plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-failsafe-plugin</artifactId>
                    <executions>
                        <execution>
                            <id>failsafe-integration-test</id>
                            <goals>
                                <goal>integration-test</goal>
                            </goals>
                            <phase>integration-test</phase>
                            <configuration>
                                <threadCount>6</threadCount>
                                <parallel>both</parallel>
                                <argLine>-Xmx1024m</argLine>
                            </configuration>
                        </execution>
                        <execution>
                            <id>failsafe-verify</id>
                            <goals>
                                <goal>verify</goal>
                            </goals>
                            <phase>verify</phase>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-jar-plugin</artifactId>
                    <version>3.0.2</version>
                    <configuration>
                        <archive>
                            <manifest>
                                <addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
                                <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
                            </manifest>
                        </archive>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-source-plugin</artifactId>
                    <version>3.0.1</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <configuration>
                        <threadCount>1</threadCount>
                        <perCoreThreadCount>true</perCoreThreadCount>
                        <parallel>both</parallel>
                        <argLine>-Xmx1536m -XX:MaxPermSize=256m -Duser.timezone=${user.timezone}</argLine>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>pl.project13.maven</groupId>
                    <artifactId>git-commit-id-plugin</artifactId>
                    <version>${git-commit-id-plugin.version}</version>
                </plugin>
            </plugins>
        </pluginManagement>

    </build>

    <!-- todo add bitbucket repo-->
    <repositories />

    <!-- todo profiles -->
    <profiles />

    <distributionManagement>
        <repository>
            <id>nexuss.westeurope.cloudapp.azure.com-snapshots</id>
            <name>nexuss.westeurope.cloudapp.azure.com-snapshots</name>
            <url>https://nexuss.westeurope.cloudapp.azure.com:8443/repository/maven-snapshots/</url>
        </repository>
    </distributionManagement>

</project>